--- a/contact_us.html
+++ b/contact_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxury Hotels | contact us</title>
+    <title>Hotels 21 | contact us</title>
     <meta name="keywords" content="Luxury Hotels">
     <meta name="author" content="Ayokunle for web site disign from Figma community">
     <meta name="author" content="Francisco Cienfuegos for web site development">
@@ -38,14 +38,14 @@
     <article id="content-body">
         <section class="article-section-copy">
             <h2>WE ARE HERE FOR YOU</h2>
-            <p>At Luxury Hotels, we take our customers seriously. Do you have any enquiries, compaints or requests, 
+            <p>At SMKN21 Hotels, we take our customers seriously. Do you have any enquiries, compaints or requests, 
                 please forward it to our support desk and we will get back to you as soon as possible.</p>
         </section>
         <section class="section-body-contactus">
             <div class="section-body-contactus-box">
-                <p class="section-body-contactus-box-direction">497 Evergreen Rd. Roseville,<br>CA 95673</p>
+                <p class="section-body-contactus-box-direction">Jl. Siaga No.9, RT.9/RW.6, Kb. Kosong, Kec. Kemayoran, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta,<br>Kode Pos 10630</p>
                 <p class="section-body-contactus-box-map">View map →</p>
-                <p class="section-body-contactus-box-celmail">Phone: +44 345 678 903<br>Email: luxury_hotels@gmail.com</p>
+                <p class="section-body-contactus-box-celmail">Phone: 0214247475<br>Email: smkn21jakarta.sch.id</p>
             </div>
             <div>
                 <form class="section-body-contactus-form">
@@ -68,9 +68,9 @@
     </div>
     <footer>
         <div class="footer-contact">
-            <h2>LUXURY</h2>
+            <h2>SMKN21</h2>
             <h3>HOTELS</h3>
-            <p>497 Evergreen Rd. Roseville, CA 95673<br>+44 345 678 903<br>luxury_hotels@gmail.com</p>
+            <p>Jl. Siaga 1, Swadaya III, Kemayoran Gempol, Jakarta Pusat, Kode Pos 10630<br>0214247475<br>smkn21jakarta.sch.id</p>
         </div>
         <div class="footer-about">
             <ul>
