--- a/facilities.html
+++ b/facilities.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxury Hotels | facilities</title>
-    <meta name="keywords" content="Luxury Hotels">
-    <meta name="author" content="Ayokunle for web site disign from Figma community">
-    <meta name="author" content="Francisco Cienfuegos for web site development">
-    <meta name="copyright" content="Design from Figma community">
-    <meta name="robots" content="nofollow">
-    <meta name="copyright" content="lincensed under CC BY 4.0">
+    <title>Hotels 21 | facilities</title>
+    <meta name="keywords" content="SMKN21 Hotels">
     <!-- Font style: montserrat regular 400, bold 700 and cormorant garamond bold 700 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +18,7 @@
 <body>
     <header class="header-facilities">
         <nav class="nav-menu">
-            <a href="index.html"><img src="./images/homepage/Main_logo.png" alt="Luxury Hotels"></a>
+            <a href="index.html"><img src="./images/homepage/Main_logo.png" alt="SMKN21 Hotels"></a>
             <ul>
                 <li class="nav-manu-ul-li"><a href="index.html">Home</a></li>
                 <li class="list-style list-style::after"><a class="a-text-style" href="#">Facilities</a></li>
@@ -32,8 +27,8 @@
             </ul>
         </nav>
         <section class="section-header-copy">
-            <p>WELCOM TO</p>
-            <h1 class="section-header-copy-h1">LUXURY</h1>
+            <p>WELCOME TO</p>
+            <h1 class="section-header-copy-h1">SMKN21</h1>
             <h2>HOTELS</h2>
             <h3>Book your stay and enjoy Luxury<br>redefined at the most affordable rates.</h3>
         </section>
@@ -67,9 +62,9 @@
     </div>
     <footer>
         <div class="footer-contact">
-            <h2>LUXURY</h2>
+            <h2>SMKN21</h2>
             <h3>HOTELS</h3>
-            <p>497 Evergreen Rd. Roseville, CA 95673<br>+44 345 678 903<br>luxury_hotels@gmail.com</p>
+            <p>Jl. Siaga 1, Swadaya III, Kemayoran Gempol, Jakarta Pusat, Kode Pos 10630<br>0214247475<br>smkn21jakarta.sch.id</p>
         </div>
         <div class="footer-about">
             <ul>
